--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,12 +10,20 @@
     "plugin:import/recommended",
     "plugin:import/typescript"
   ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
   "rules": {
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
-    "import/order": [2, {"alphabetize": { "order": "asc" } }]
+    "import/order": [2, {"alphabetize": { "order": "asc" } }],
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "all",
+        "endOfLine": "lf",
+        "semi": true,
+        "singleQuote": true,
+        "printWidth": 120,
+        "tabWidth": 2
+      }
+    ]
   }
 }
